--- a/app/src/main/res/layout/item_wine.xml
+++ b/app/src/main/res/layout/item_wine.xml
@@ -2,6 +2,8 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginTop="@dimen/common_space_min"
+    android:layout_margin="@dimen/common_space_min"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -36,11 +38,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:paddingHorizontal="@dimen/common_space_min"
+            android:layout_marginTop="@dimen/common_space_middle"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cbFavorite">
+            android:background="@drawable/background_item_text"
+            app:layout_constraintTop_toBottomOf="@id/rating">
 
             <TextView
                 android:id="@+id/tvWine"
+                android:textSize="24sp"
+                android:textStyle="bold"
+
+                android:textColor="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:text="Wine" />
@@ -48,6 +57,8 @@
 
             <TextView
                 android:id="@+id/tvWinery"
+                android:textSize="20sp"
+                android:textColor="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:text="Winery" />
@@ -55,6 +66,7 @@
 
             <TextView
                 android:id="@+id/tvLocation"
+                android:textColor="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:text="Location" />
